--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- This script is added by PhoneGap build -->
     <!-- <script type="text/javascript" src="cordova.js"></script> -->
     
+    <!-- This script is added by PhoneGap build -->
+    <!-- <script type="text/javascript" src="cordova.js"></script> -->
+    
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/knockout-2.2.1.js"></script>
     <script type="text/javascript" src="js/globalize.js"></script>
